infra/k8s/ingress-srv.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-srv # name of this pod
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true' # to active regex in route eg: line 26
spec:
  rules:
    - host: posts.com # you can chnage it base on what you made it before
    # the paths for Specific paths but event bus use service name with port
      http:
        paths:
          - path: /posts/create
            backend:
              serviceName: posts-clusterip-srv # name of service or that pod (container) we want to connect to run kubectl get services
              servicePort: 4000
          - path: /posts
            backend:
              serviceName: query-srv  # name of service or that pod (container) we want to connect to
              servicePort: 4002
          - path: /posts/?(.*)/comments ## useing regex to tell path anything after/posts with match regex with /comments
            backend:
              serviceName: comments-srv
              servicePort: 4001
              # react routt must be last because if we try to access /posts with look inside react
          - path: /?(.*)
            backend:
              serviceName: client-srv
              servicePort: 3000
